Fixed issue with misplaced footer and updated index

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                         <option value="0">None</option>
                     </select>
                 </div>
-                <div class="weekly-hours-worked">
+                <div class="weekly-hourly-rate">
                     <p>What is your expected hourly rate?</p>
-                    <select id="hours-worked">
+                    <select id="hourly-rate">
                         <option selected disabled hidden>
                             Select
                         </option>
