Updated HTML and CSS to address solely tuition cost section

--- a/index.html
+++ b/index.html
@@ -20,39 +20,39 @@
 <body>
     <main>
         <div class="setup-inner">
-            <!-- <h1>Partial Calculator</h1> -->
-            <div class="action-steps">
+            <div class="scholastic-cost">
 
                 <!-- College Tuition Section -->
                     <!-- <div class="education-cost">
                         <h1>Cost of Your Education</h1>
                     </div> -->
-                    <div class="tuition-cost">
-                        <p>Total Yearly Tuition Cost</p>
-                        <input type="text" id="yearly-cost" placeholder="Insert Yearly Cost">
-                    </div>
-                    <div class="total-college-years">
-                        <p>Number of Years at University</p>
-                        <select id="total-years">
-                            <option selected disabled hidden>
-                                Select Total Years
-                            </option>
-                            <option value="1">Certificate</option>
-                            <option value="2">Associates Degree</option>
-                            <option value="3">Extended Associates Degree</option>
-                            <option value="4">Undergrad</option>
-                            <option value="5">Undergrad & Masters</option>
-                        </select>
-                    </div>
+                <div class="tuition-cost">
+                    <p>Total Yearly Tuition Cost</p>
+                    <input type="text" id="yearly-cost" placeholder="Insert Yearly Cost">
+                </div>
+                <div class="total-college-years">
+                    <p>Number of Years at University</p>
+                    <select id="total-years">
+                        <option selected disabled hidden>
+                            Select Total Years
+                        </option>
+                        <option value="1">Certificate</option>
+                        <option value="2">Associates Degree</option>
+                        <option value="3">Extended Associates Degree</option>
+                        <option value="4">Undergrad</option>
+                        <option value="5">Undergrad & Masters</option>
+                    </select>
+                </div>
 
-                    <!-- Total Cost of College Tuition -->
-                    <div class="outstanding-balance">
-                        <p>Amount Due</p>
-                        $<span id="total">0</span>
-                        <button id="calculate">Calculate</button>
-                    </div>
-                    
-                <!-- Working Hours Section -->
+                <!-- Total Cost of College Tuition -->
+                <div class="outstanding-balance">
+                    <p>Total Cost of Degree</p>
+                    $<span id="total"></span>
+                    <!-- <button id="calculate">Calculate</button> -->
+                </div>
+            </div>
+
+            <!-- <div class="action-steps">                    
                 <div class="semesters-worked">
                     <p>How many semesters are you planning on working?</p>
                     <select id="num-semesters">
@@ -101,8 +101,7 @@
                         <option value="16">$360</option>
                         <option value="18">$800</option>                   
                     </select>
-                    <!-- <input type="text" id="yearly-cost" placeholder="Insert Yearly Cost"> -->
-                </div>
+                </div> -->
 
                 <!-- <div class="total-college-years">
                     <p>Number of Years at University</p>
