--- a/index.html
+++ b/index.html
@@ -19,141 +19,141 @@
 
 <body>
     <main>
-        <div class="setup-inner">
-            <div class="scholastic-cost">
+        <div class="page-container">
+            <div id="content-wrap">
+                <h1>Cost of Your Education</h1>
+                <div class="scholastic-cost">
+                    <!-- College Tuition Section -->
+                    <div class="tuition-cost">
+                        <p>Total Yearly Tuition Cost</p>
+                        <input type="text" id="yearly-cost" placeholder="Insert Yearly Cost">
+                    </div>
+                    <div class="total-college-years">
+                        <p>Number of Years at University</p>
+                        <select id="total-years">
+                            <option selected disabled hidden>
+                                Select Total Years
+                            </option>
+                            <option value="1">Certificate</option>
+                            <option value="2">Associates Degree</option>
+                            <option value="3">Extended Associates Degree</option>
+                            <option value="4">Undergrad</option>
+                            <option value="5">Undergrad & Masters</option>
+                        </select>
+                    </div>
 
-                <!-- College Tuition Section -->
-                    <!-- <div class="education-cost">
-                        <h1>Cost of Your Education</h1>
+                    <!-- Total Cost of College Tuition -->
+                    <div class="outstanding-balance">
+                        <p>Total Cost of Degree</p>
+                        $<span id="total"></span>
+                        <!-- <button id="calculate">Calculate</button> -->
+                    </div>
+                </div>
+
+                <!-- <div class="action-steps">                    
+                    <div class="semesters-worked">
+                        <p>How many semesters are you planning on working?</p>
+                        <select id="num-semesters">
+                            <option selected disabled hidden>
+                                Semesters Working
+                            </option>
+                            <option value="0">None (0)</option>
+                            <option value="3">Some semesters (2)</option>
+                            <option value="4">Half of all semesters (4)</option>
+                            <option value="8">All semesters (8)</option>                        
+                        </select>
+                    </div>
+                    <div class="weekly-hours-worked">
+                        <p>What are the total number of hours you're planning on working per week?</p>
+                        <select id="hours-worked">
+                            <option selected disabled hidden>
+                                Hours Working Per Week
+                            </option>
+                            <option value="0">None</option>
+                            <option value="10">Here & There (10hrs)</option>
+                            <option value="20">Part-Time (20hrs)</option>
+                            <option value="40">Full-Time (40hrs)</option>                       
+                        </select>
+                    </div>
+                    <div class="weekly-hourly-rate">
+                        <p>What is your expected hourly rate?</p>
+                        <select id="hourly-rate">
+                            <option selected disabled hidden>
+                                Select Hourly Rate
+                            </option>
+                            <option value="0">N/A</option>
+                            <option value="14">$14/hr</option>
+                            <option value="16">$16/hr</option>
+                            <option value="18">$18/hr</option>
+                            <option value="20">$20/hr</option>                        
+                        </select>
+                    </div>
+                    <div class="tuition-cost">
+                        <p>Expected Earnings Per Week</p>
+                        <select id="weekly-earnings">
+                            <option selected disabled hidden>
+                                Hourly Earnings per Week
+                            </option>
+                            <option value="0">N/A</option>
+                            <option value="14">$160</option>
+                            <option value="16">$360</option>
+                            <option value="18">$800</option>                   
+                        </select>
                     </div> -->
-                <div class="tuition-cost">
-                    <p>Total Yearly Tuition Cost</p>
-                    <input type="text" id="yearly-cost" placeholder="Insert Yearly Cost">
-                </div>
-                <div class="total-college-years">
-                    <p>Number of Years at University</p>
-                    <select id="total-years">
-                        <option selected disabled hidden>
-                            Select Total Years
-                        </option>
-                        <option value="1">Certificate</option>
-                        <option value="2">Associates Degree</option>
-                        <option value="3">Extended Associates Degree</option>
-                        <option value="4">Undergrad</option>
-                        <option value="5">Undergrad & Masters</option>
-                    </select>
-                </div>
 
-                <!-- Total Cost of College Tuition -->
-                <div class="outstanding-balance">
-                    <p>Total Cost of Degree</p>
-                    $<span id="total"></span>
-                    <!-- <button id="calculate">Calculate</button> -->
-                </div>
-            </div>
+                    <!-- <div class="total-college-years">
+                        <p>Number of Years at University</p>
+                        <select id="total-years">
+                            <option selected disabled hidden>
+                                Select
+                            </option>
+                            <option value="5">Undergrad & Masters</option>
+                            <option value="4">Undergrad</option>
+                            <option value="3">Extended Associates Degree</option>
+                            <option value="2">Associates Degree</option>
+                            <option value="1">Certificate</option>
+                        </select>
+                    </div>
 
-            <!-- <div class="action-steps">                    
                 <div class="semesters-worked">
                     <p>How many semesters are you planning on working?</p>
                     <select id="num-semesters">
                         <option selected disabled hidden>
-                            Semesters Working
+                            Select
                         </option>
-                        <option value="0">None (0)</option>
-                        <option value="3">Some semesters (2)</option>
+                        <option value="8">All semesters (8)</option>
                         <option value="4">Half of all semesters (4)</option>
-                        <option value="8">All semesters (8)</option>                        
+                        <option value="3">Some semesters (2)</option>
+                        <option value="0">None (0)</option>
                     </select>
                 </div>
                 <div class="weekly-hours-worked">
-                    <p>What are the total number of hours you're planning on working per week?</p>
+                    <p>What are the total number of hours you're planning on working per week</p>
                     <select id="hours-worked">
                         <option selected disabled hidden>
-                            Hours Working Per Week
+                            Select
                         </option>
-                        <option value="0">None</option>
-                        <option value="10">Here & There (10hrs)</option>
+                        <option value="40">Full-Time (40hrs)</option>
                         <option value="20">Part-Time (20hrs)</option>
-                        <option value="40">Full-Time (40hrs)</option>                       
+                        <option value="10">Here & There (10hrs)</option>
+                        <option value="0">None</option>
                     </select>
                 </div>
                 <div class="weekly-hourly-rate">
                     <p>What is your expected hourly rate?</p>
                     <select id="hourly-rate">
                         <option selected disabled hidden>
-                            Select Hourly Rate
-                        </option>
-                        <option value="0">N/A</option>
-                        <option value="14">$14/hr</option>
-                        <option value="16">$16/hr</option>
-                        <option value="18">$18/hr</option>
-                        <option value="20">$20/hr</option>                        
-                    </select>
-                </div>
-                <div class="tuition-cost">
-                    <p>Expected Earnings Per Week</p>
-                    <select id="weekly-earnings">
-                        <option selected disabled hidden>
-                            Hourly Earnings per Week
-                        </option>
-                        <option value="0">N/A</option>
-                        <option value="14">$160</option>
-                        <option value="16">$360</option>
-                        <option value="18">$800</option>                   
-                    </select>
-                </div> -->
-
-                <!-- <div class="total-college-years">
-                    <p>Number of Years at University</p>
-                    <select id="total-years">
-                        <option selected disabled hidden>
                             Select
                         </option>
-                        <option value="5">Undergrad & Masters</option>
-                        <option value="4">Undergrad</option>
-                        <option value="3">Extended Associates Degree</option>
-                        <option value="2">Associates Degree</option>
-                        <option value="1">Certificate</option>
+                        <option value="20">$20/hr</option>
+                        <option value="18">$18/hr</option>
+                        <option value="16">$16/hr</option>
+                        <option value="14">$14/hr</option>
                     </select>
+                </div> -->
                 </div>
-
-            <div class="semesters-worked">
-                <p>How many semesters are you planning on working?</p>
-                <select id="num-semesters">
-                    <option selected disabled hidden>
-                        Select
-                    </option>
-                    <option value="8">All semesters (8)</option>
-                    <option value="4">Half of all semesters (4)</option>
-                    <option value="3">Some semesters (2)</option>
-                    <option value="0">None (0)</option>
-                </select>
-            </div>
-            <div class="weekly-hours-worked">
-                <p>What are the total number of hours you're planning on working per week</p>
-                <select id="hours-worked">
-                    <option selected disabled hidden>
-                        Select
-                    </option>
-                    <option value="40">Full-Time (40hrs)</option>
-                    <option value="20">Part-Time (20hrs)</option>
-                    <option value="10">Here & There (10hrs)</option>
-                    <option value="0">None</option>
-                </select>
-            </div>
-            <div class="weekly-hourly-rate">
-                <p>What is your expected hourly rate?</p>
-                <select id="hourly-rate">
-                    <option selected disabled hidden>
-                        Select
-                    </option>
-                    <option value="20">$20/hr</option>
-                    <option value="18">$18/hr</option>
-                    <option value="16">$16/hr</option>
-                    <option value="14">$14/hr</option>
-                </select>
-            </div> -->
-            </div>
+            </div>    
+                
         </div>
     </main>
     <footer>
