Fixed Title positioning for cost calc section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="page-container">
             <div id="content-wrap">
                 <h1>Cost of Your Education</h1>
-                <div class="scholastic-cost">
+                <form class="scholastic-cost">
                     <!-- College Tuition Section -->
                     <div class="tuition-cost">
                         <p>Total Yearly Tuition Cost</p>
@@ -48,7 +48,7 @@
                         $<span id="total"></span>
                         <!-- <button id="calculate">Calculate</button> -->
                     </div>
-                </div>
+                </form>
 
                 <!-- <div class="action-steps">                    
                     <div class="semesters-worked">
