Fixed tuition calculator issue where values weren't being calculated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="page-container">
             <div id="content-wrap">
                 <h1>Cost of Your Education</h1>
-                <form class="scholastic-cost">
+                <form id="scholastic-cost">
                     <!-- College Tuition Section -->
                     <div class="tuition-cost">
                         <p>Total Yearly Tuition Cost</p>
@@ -43,7 +43,7 @@
                     </div>
 
                     <!-- Total Cost of College Tuition -->
-                    <div class="outstanding-balance">
+                    <div id="outstanding-balance">
                         <p>Total Cost of Degree</p>
                         $<span id="total"></span>
                         <!-- <button id="calculate">Calculate</button> -->
