Updated income generated section of web page

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     <div id="outstanding-balance">
                         <p>Total Cost of Degree</p>
                         $<span id="total"></span>
-                        <!-- <button id="calculate">Calculate</button> -->
                     </div>
                 </form>
 
-                <!-- <div class="action-steps">                    
+                <h1>Income Generation</h1>
+                <form id="income-generation">
                     <div class="semesters-worked">
                         <p>How many semesters are you planning on working?</p>
                         <select id="num-semesters">
@@ -88,6 +88,8 @@
                             <option value="20">$20/hr</option>                        
                         </select>
                     </div>
+                </form>
+                <!-- <div class="action-steps">                    
                     <div class="tuition-cost">
                         <p>Expected Earnings Per Week</p>
                         <select id="weekly-earnings">
