Created organizational components to facilitate additional builds

--- a/index.html
+++ b/index.html
@@ -51,50 +51,54 @@
                     </div>
                 </form>
 
+                <hr>
+
                 <!-- Insert loan interest slider -->
 
                 <!-- Income Generated Section -->
-                <h1 id="income_title">Income Generation</h1>
-                <h2>Working while going to school can help you greatly minimize your college payments after leaving college. Use the section below to uncover how much you could earn if you worked during the school year.</h2>
-                <form id="income-generation">
-                    <div class="weekly-hours-worked">
-                        <p>What are the total number of hours you're expecting to work per week?</p>
-                        <select id="hours-worked">
-                            <option selected disabled hidden>
-                                Select Hours
-                            </option>
-                            <option value="0">None</option>
-                            <option value="10">Here & There (10hrs)</option>
-                            <option value="20">Part-Time (20hrs)</option>
-                            <option value="40">Full-Time (40hrs)</option>                       
-                        </select>
-                    </div>
-                    <div class="weekly-hourly-rate">
-                        <p>What is your expected hourly rate?</p>
-                        <select id="hourly-rate">
-                            <option selected disabled hidden>
-                                Select Hourly Rate
-                            </option>
-                            <option value="0">N/A</option>
-                            <option value="15">$15/hr</option>
-                            <option value="17">$17/hr</option>
-                            <option value="19">$19/hr</option>
-                            <option value="20">$20/hr</option>                        
-                        </select>
-                    </div>
-                    <div class="semesters-worked">
-                        <p>How many semesters are you planning on working?</p>
-                        <select id="num-semesters">
-                            <option selected disabled hidden>
-                                Semesters Working
-                            </option>
-                            <option value="0">None (0)</option>
-                            <option value="2">Some semesters (2)</option>
-                            <option value="4">Half of all semesters (4)</option>
-                            <option value="8">All semesters (8)</option>                        
-                        </select>
-                    </div>
-                </form>            
+                <div class="income-section">
+                    <h1 id="income_title">Income Generation</h1>
+                    <h2>Working while going to school can help you greatly minimize your college payments after leaving college. Use the section below to uncover how much you could earn if you worked during the school year.</h2>
+                    <form id="income-generation">
+                        <div class="weekly-hours-worked">
+                            <p>What are the total number of hours you're expecting to work per week?</p>
+                            <select id="hours-worked">
+                                <option selected disabled hidden>
+                                    Select Hours
+                                </option>
+                                <option value="0">None</option>
+                                <option value="10">Here & There (10hrs)</option>
+                                <option value="20">Part-Time (20hrs)</option>
+                                <option value="40">Full-Time (40hrs)</option>                       
+                            </select>
+                        </div>
+                        <div class="weekly-hourly-rate">
+                            <p>What is your expected hourly rate?</p>
+                            <select id="hourly-rate">
+                                <option selected disabled hidden>
+                                    Select Hourly Rate
+                                </option>
+                                <option value="0">N/A</option>
+                                <option value="15">$15/hr</option>
+                                <option value="17">$17/hr</option>
+                                <option value="19">$19/hr</option>
+                                <option value="20">$20/hr</option>                        
+                            </select>
+                        </div>
+                        <div class="semesters-worked">
+                            <p>How many semesters are you planning on working?</p>
+                            <select id="num-semesters">
+                                <option selected disabled hidden>
+                                    Semesters Working
+                                </option>
+                                <option value="0">None (0)</option>
+                                <option value="2">Some semesters (2)</option>
+                                <option value="4">Half of all semesters (4)</option>
+                                <option value="8">All semesters (8)</option>                        
+                            </select>
+                        </div>
+                    </form> 
+                </div>           
 
                 <!-- Total Earnings Sections -->
                 <div class="earnings">
