--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <form>
                         <div class="loan-type">
                             <p>What type of loan are you considering?</p>
-                            <select id="loan-type-input" name="loan_select_input" onchange="showDiv('hidden_loan_type_description', input_type)">
+                            <select id="loan-type-input" name="loan_select_input" onchange="showDiv('hidden_loan_type_description', this)">
                                 <option selected disabled hidden>
                                     Select Loan Type
                                 </option>
                                 <option value="0">Undecided</option>
-                                <option value="2">Fixed</option>
-                                <option value="1">Variable</option>
+                                <option value="1">Fixed</option>
+                                <option value="2">Variable</option>
                             </select>
                             <div id="hidden_loan_type_description">
                                 <div id="hidden_loan_type_undecided">
